--- a/.env
+++ b/.env
@@ -15,6 +15,13 @@ DB_DATABASE=dotechcf_ka_imss
 DB_USERNAME=dotechcf_ka_imss
 DB_PASSWORD=BA7RTmfVfJfFVGFsXA5x
 
+# DB_CONNECTION=pgsql
+# DB_HOST=silver.natanetwork.id
+# DB_PORT=3306
+# DB_DATABASE=dotechcf_ka_imss
+# DB_USERNAME=dotechcf_ka_imss
+# DB_PASSWORD=BA7RTmfVfJfFVGFsXA5x
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
